20061017 snapshot.c,tape.c: fix memory leaks on snapshot and tape write (fixes
         bug #1568084; thanks, crabfists) (Fred).
20061021 if1.c,if2.c,machine.[ch],machines/{pentagon.c,scorpion.c,spec128.c,
         spec16.c,spec48.c,spec_se.c,specplus2.c,specplus2a.c,specplus3.c,
         specplus3e.c,tc2048.c,tc2068.c,ts2068.c},profile.c,settings-header.pl,
         settings.dat,settings.pl,widget/roms.c: fallback to loading default ROM
         if custom ROM is not found (Fred).
20061126 ui/sdl/sdljoystick.c: fix joystick support in SDL UI (Fred).
20061126 man/fuse.1: add a smidgeon of content about Interface I (Fred).
20061202 widget/widget.c: guard against the double free on the options dialog
         (Fred).
20061202 widget/widget.c: use checkbox instead of "On/Off" text in widget UIs
         (patch #1309374) (Gergely Szasz).
20061202 man/fuse.1: add some more TS2068 stuff (Fred).
20061213 ui/xlib/xdisplay.c: fix compilation.
20061215 debugger/breakpoint.c: fix segfault on "clear" command (thanks,
	 Stuart Brady)
20061217 machine.c: load rom into correct memory bank (fixes If1 ROM paging)
         (Fred).
20061217 menu.c,rzx.[ch]: reset rzx_instructions_offset on rollback to fix
	 replay of rolled back recordings (and some refactoring).
20061222 sound/sdlsound.c: clear sound fifo before closing (Fred).
20061222 Makefile.am,configure.in,sound/{Makefile.am,coreaudiosound.c,
         lowlevel.h,sfifo.c},timer.c: add CoreAudio sound driver for Mac OS X
         (Fred).
20061223 configure.in: fix CoreAudio comment (Fred).
20061223 configure.in: fix typo in above! (Fred).
20070101 menu_data.c,ui.c,man/fuse.1: change capitalisation of
	 "Insert snapshot" command and document rollback commands.
20070106 tape.c: support "no edge", "level low" and "level high" from
	 tape edges.
20070111 tape.c: display vaguely useful information in the tape browser for
	 generalised data blocks.
20070113 ChangeLog: bring up to date.