@@ -30,6 +30,8 @@
 #include <libspectrum.h>
 
 void sound_init( const char *device );
+void sound_pause( void );
+void sound_unpause( void );
 void sound_end( void );
 void sound_ay_write( int reg, int val, libspectrum_dword now );
 void sound_ay_reset( void );
